// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Inputs/AddressInput Address Input Disabled 1`] = `
<form
  autoComplete="off"
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiTextField-root sc-jJoQJp kYzoik"
    spellCheck={false}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled Mui-disabled Mui-disabled"
      data-shrink={true}
      htmlFor="address"
      id="address-label"
    >
      Address
    </label>
    <div
      className="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline Mui-disabled Mui-disabled MuiInputBase-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiFilledInput-input Mui-disabled Mui-disabled"
        disabled={true}
        id="address"
        name="address"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Ethereum address"
        required={false}
        type="text"
      />
    </div>
  </div>
</form>
`;

exports[`Storyshots Inputs/AddressInput Address Input Loading 1`] = `
<form
  autoComplete="off"
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiTextField-root sc-jJoQJp bqJZEI"
    spellCheck={false}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled"
      data-shrink={true}
      htmlFor="address"
      id="address-label"
    >
      Address
    </label>
    <div
      className="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl MuiInputBase-adornedEnd MuiFilledInput-adornedEnd"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiFilledInput-input MuiInputBase-inputAdornedEnd MuiFilledInput-inputAdornedEnd"
        disabled={false}
        id="address"
        name="address"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Ethereum address"
        required={false}
        type="text"
      />
      <div
        className="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-filled"
      >
        <div
          className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
          role="progressbar"
          style={
            Object {
              "height": "16px",
              "width": "16px",
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx={44}
              cy={44}
              fill="none"
              r={20.2}
              strokeWidth={3.6}
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Storyshots Inputs/AddressInput Address Input With Adornment 1`] = `
<form
  autoComplete="off"
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiTextField-root sc-jJoQJp bqJZEI"
    spellCheck={false}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled"
      data-shrink={true}
      htmlFor="address"
      id="address-label"
    >
      Address
    </label>
    <div
      className="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl MuiInputBase-adornedEnd MuiFilledInput-adornedEnd"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiFilledInput-input MuiInputBase-inputAdornedEnd MuiFilledInput-inputAdornedEnd"
        disabled={false}
        id="address"
        name="address"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Ethereum address"
        required={false}
        type="text"
      />
      <div
        className="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-filled"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root sc-cZMNgc hXynUB"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
  </div>
</form>
`;

exports[`Storyshots Inputs/AddressInput Address Input With ENS Resolution 1`] = `
<form
  autoComplete="off"
  noValidate={true}
  onSubmit={[Function]}
>
  <p
    className="MuiTypography-root sc-jQrDum jLriAF MuiTypography-body1"
  >
    <span
      className="MuiSwitch-root sc-kLwhqv eEUkNP"
    >
      <span
        aria-disabled={false}
        className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-63 MuiSwitch-switchBase MuiSwitch-colorSecondary"
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label"
        >
          <input
            checked={false}
            className="PrivateSwitchBase-input-66 MuiSwitch-input"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="MuiSwitch-thumb"
          />
        </span>
      </span>
      <span
        className="MuiSwitch-track"
      />
    </span>
    Simulate an error in the resolver ENS Network call
  </p>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "marginTop": "8px",
        "minHeight": "80px",
      }
    }
  >
    <div
      className="MuiFormControl-root MuiTextField-root sc-jJoQJp bqJZEI"
      spellCheck={false}
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
        data-shrink={false}
        htmlFor="address"
        id="address-label"
      >
        Address with ENS
      </label>
      <div
        className="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
        onClick={[Function]}
      >
        <input
          aria-describedby="address-helper-text"
          aria-invalid={false}
          autoFocus={false}
          className="MuiInputBase-input MuiFilledInput-input"
          disabled={false}
          id="address"
          name="address"
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Type safe.test to check ENS resolution"
          required={false}
          type="text"
        />
      </div>
      <p
        className="MuiFormHelperText-root MuiFormHelperText-contained"
        id="address-helper-text"
      >
        Type safe.test to check ENS resolution!
      </p>
    </div>
    
  </div>
  <div
    style={
      Object {
        "marginTop": "8px",
        "minHeight": "80px",
      }
    }
  >
    <div
      className="MuiFormControl-root MuiTextField-root sc-jJoQJp bqJZEI"
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
        data-shrink={true}
        htmlFor="customENSThrottleDelay"
        id="customENSThrottleDelay-label"
      >
        custom Delay (in milliseconds)
      </label>
      <div
        className="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
        onClick={[Function]}
      >
        <input
          aria-describedby="customENSThrottleDelay-helper-text"
          aria-invalid={false}
          autoFocus={false}
          className="MuiInputBase-input MuiFilledInput-input"
          disabled={false}
          id="customENSThrottleDelay"
          name="customENSThrottleDelay"
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Customize your throttle delay for ENS resolution!"
          required={false}
          type="number"
          value={2000}
        />
      </div>
      <p
        className="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
        id="customENSThrottleDelay-helper-text"
      >
        Customize your throttle delay for ENS resolution!
      </p>
    </div>
  </div>
  <p
    className="MuiTypography-root sc-jQrDum jLriAF MuiTypography-body1"
  >
    Address In the State:
  </p>
  <pre
    className="sc-jUosCB eSSjao"
  >
     
  </pre>
</form>
`;

exports[`Storyshots Inputs/AddressInput Address Input With Errors 1`] = `
<form
  autoComplete="off"
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiTextField-root sc-jJoQJp laNQiK"
    spellCheck={false}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled Mui-error Mui-error"
      data-shrink={true}
      htmlFor="address"
      id="address-label"
    >
      Address
    </label>
    <div
      className="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline Mui-error Mui-error MuiInputBase-formControl"
      onClick={[Function]}
    >
      <input
        aria-describedby="address-helper-text"
        aria-invalid={true}
        autoFocus={false}
        className="MuiInputBase-input MuiFilledInput-input"
        disabled={false}
        id="address"
        name="address"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Ethereum address"
        required={false}
        type="text"
      />
    </div>
    <p
      className="MuiFormHelperText-root MuiFormHelperText-contained Mui-error"
      id="address-helper-text"
    >
      Invalid Address
    </p>
  </div>
</form>
`;

exports[`Storyshots Inputs/AddressInput Address Input With Simple Address Validation 1`] = `
<form
  autoComplete="off"
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiTextField-root sc-jJoQJp bqJZEI"
    spellCheck={false}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled"
      data-shrink={true}
      htmlFor="address"
      id="address-label"
    >
      Address
    </label>
    <div
      className="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiFilledInput-input"
        disabled={false}
        id="address"
        name="address"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Ethereum address"
        required={false}
        type="text"
      />
    </div>
  </div>
  <p
    className="MuiTypography-root sc-jQrDum jLriAF MuiTypography-body1"
  >
    Address In the State:
  </p>
  <pre
    className="sc-jUosCB eSSjao"
  >
    0x123...
  </pre>
</form>
`;

exports[`Storyshots Inputs/AddressInput Address Input Without Prefix 1`] = `
<form
  autoComplete="off"
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiTextField-root sc-jJoQJp bqJZEI"
    spellCheck={false}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled"
      data-shrink={true}
      htmlFor="address"
      id="address-label"
    >
      Address
    </label>
    <div
      className="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiFilledInput-input"
        disabled={false}
        id="address"
        name="address"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Ethereum address"
        required={false}
        type="text"
      />
    </div>
  </div>
  <p
    className="MuiTypography-root sc-jQrDum jLriAF MuiTypography-body1"
  >
    Address In the State:
  </p>
  <pre
    className="sc-jUosCB eSSjao"
  >
    0x83eC7B0506556a7749306D69681aDbDbd08f0769
  </pre>
</form>
`;

exports[`Storyshots Inputs/AddressInput Safe Address Input Validation 1`] = `
<form
  autoComplete="off"
  noValidate={true}
  onSubmit={[Function]}
>
  <p
    className="MuiTypography-root sc-jQrDum jLriAF MuiTypography-body1"
  >
    You can customize validations
  </p>
  <p
    className="MuiTypography-root sc-jQrDum jLriAF MuiTypography-body1"
  >
    valid values:
  </p>
  <pre
    className="sc-jUosCB eSSjao"
  >
    0x83eC7B0506556a7749306D69681aDbDbd08f0769 & rin:0x83eC7B0506556a7749306D69681aDbDbd08f0769
  </pre>
  <p
    className="MuiTypography-root sc-jQrDum jLriAF MuiTypography-body1"
  />
  <div
    className="MuiFormControl-root MuiTextField-root sc-jJoQJp bqJZEI"
    spellCheck={false}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
      data-shrink={false}
      htmlFor="safeAddress"
      id="safeAddress-label"
    >
      Safe Address
    </label>
    <div
      className="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
      onClick={[Function]}
    >
      <input
        aria-describedby="safeAddress-helper-text"
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiFilledInput-input"
        disabled={false}
        id="safeAddress"
        name="safeAddress"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Type the valid safe address"
        required={false}
        type="text"
      />
    </div>
    <p
      className="MuiFormHelperText-root MuiFormHelperText-contained"
      id="safeAddress-helper-text"
    >
      Valid safe: 0x83eC7B0506556a7749306D69681aDbDbd08f0769
    </p>
  </div>
  <p
    className="MuiTypography-root sc-jQrDum jLriAF MuiTypography-body1"
  >
    Address In the State:
  </p>
  <pre
    className="sc-jUosCB eSSjao"
  >
     
  </pre>
</form>
`;

exports[`Storyshots Inputs/AddressInput Simple Address Input 1`] = `
<div>
  <p
    className="MuiTypography-root sc-jQrDum jLriAF MuiTypography-body1"
  >
    Network Settings:
  </p>
  <div>
    <div
      className="MuiFormControl-root"
    >
      <div
        className="MuiInputBase-root MuiInput-root MuiInput-underline sc-bYoBSM dNRdPa MuiInputBase-formControl MuiInput-formControl"
        onClick={[Function]}
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby="generic-select generic-select"
          className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
          id="generic-select"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <div>
            <p
              className="sc-crHmcD dtryax"
              color="text"
              size="sm"
            >
              Rinkeby (rin:)
            </p>
          </div>
        </div>
        <input
          aria-hidden={true}
          className="MuiSelect-nativeInput"
          onAnimationStart={[Function]}
          onChange={[Function]}
          required={false}
          tabIndex={-1}
          value="rin"
        />
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
  <form
    autoComplete="off"
    noValidate={true}
    onSubmit={[Function]}
    style={
      Object {
        "display": "flex",
        "margin": "12px 0px",
      }
    }
  >
    <div
      className="MuiFormControl-root MuiTextField-root sc-jJoQJp gNEEiH"
      spellCheck={false}
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled"
        data-shrink={true}
        htmlFor="address"
        id="address-label"
      >
        Address
      </label>
      <div
        className="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          autoFocus={false}
          className="MuiInputBase-input MuiFilledInput-input MuiInputBase-inputHiddenLabel MuiFilledInput-inputHiddenLabel"
          disabled={false}
          id="address"
          name="address"
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Ethereum address"
          required={false}
          type="text"
        />
      </div>
    </div>
    <button
      aria-label="load QR code"
      className="MuiButtonBase-root MuiIconButton-root"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <span
          className="sc-iqseJM iJclAE"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <path
                d="M0 0H24V24H0z"
              />
              <path
                className="icon-color"
                d="M4 2h5c1.105 0 2 .895 2 2v5c0 1.105-.895 2-2 2H4c-1.105 0-2-.895-2-2V4c0-1.105.895-2 2-2zm0 2v5h5V4H4zM4 13h5c1.105 0 2 .895 2 2v5c0 1.105-.895 2-2 2H4c-1.105 0-2-.895-2-2v-5c0-1.105.895-2 2-2zm0 2v5h5v-5H4zM15 2h5c1.105 0 2 .895 2 2v5c0 1.105-.895 2-2 2h-5c-1.105 0-2-.895-2-2V4c0-1.105.895-2 2-2zm0 2v5h5V4h-5z"
                fillRule="nonzero"
              />
              <rect
                className="icon-color"
                height="3"
                rx=".5"
                transform="matrix(-1 0 0 1 29 0)"
                width="3"
                x="13"
                y="13"
              />
              <rect
                className="icon-color"
                height="3"
                rx=".5"
                transform="matrix(-1 0 0 1 41 0)"
                width="3"
                x="19"
                y="13"
              />
              <rect
                className="icon-color"
                height="3"
                rx=".5"
                transform="matrix(-1 0 0 1 35 0)"
                width="3"
                x="16"
                y="16"
              />
              <rect
                className="icon-color"
                height="3"
                rx=".5"
                transform="matrix(-1 0 0 1 41 0)"
                width="3"
                x="19"
                y="19"
              />
              <rect
                className="icon-color"
                height="3"
                rx=".5"
                transform="matrix(-1 0 0 1 29 0)"
                width="3"
                x="13"
                y="19"
              />
            </g>
          </svg>
        </span>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </form>
  <p
    className="MuiTypography-root sc-jQrDum jLriAF MuiTypography-body1"
  >
    Address In the State:
  </p>
  <pre
    className="sc-jUosCB eSSjao"
  >
     
  </pre>
</div>
`;
